# Code

./: .gitignore  README.md
C/: CMakeLists.txt
C - BasicTrader/src/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  CoastlineTrader.cpp  CoastlineTrader.h  Code.cpp  FXrateTrading.cpp  FXrateTrading.h  HelpClass.h  Liquidity.cpp  Liquidity.h  LocalLiquidity.cpp  LocalLiquidity.h  NbDcCounter.cpp  NbDcCounter.h  PriceFeedData.cpp  PriceFeedData.h  Prices.h  Runner.cpp  Runner.h  config.txt
C - BasicTrader/src/helper/: ConfigManager.h  Macros.h  UsefullFunctions.h
C - BasicTrader/tests/: CMakeLists.txt
C - LimitOrders/src/: CMakeLists.txt
C - LimitOrders/src/LimitOrders/: AlphaEnginePublic.h  LocalLiquidity.h  Tools.cpp  Tools.h
C - LimitOrders/tests/: LocalLiquidity_test.cpp  Price_test.cpp  Tools_test.cpp
C/LimitOrders/: AlphaEngine.h  CoastlineTrader.h  LimitOrder.h  Price.h  Runner.h
C/src/LimitOrders/: AlphaEngine.h  LocalLiquidity.cpp  Price.cpp
C/tests/: CMakeLists.txt  Price_test.cpp  Tools_test.cpp
C_BasicTrader/: CMakeLists.txt  ompRunner.sh
C_BasicTrader/src/: AVXHelper.cpp  AVXHelper.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  CoastlineTrader.cpp  CoastlineTrader.h  Code.cpp  FXrateTrading.cpp  FXrateTrading.h  HelpClass.cpp  HelpClass.h  Liquidity.cpp  Liquidity.h  LocalLiquidity.cpp  LocalLiquidity.h  NbDcCounter.cpp  NbDcCounter.h  PriceFeedData.cpp  PriceFeedData.h  Prices.cpp  Prices.h  Runner.cpp  Runner.h  config.txt
C_BasicTrader/src/helper/: ConfigManager.cpp  ConfigManager.h  Macros.h  Timer.h  UsefullFunctions.cpp  UsefullFunctions.h
C_LimitOrders/tests/: CMakeLists.txt
InputData/: EUR_USD.csv  generator.m
Java/BasicTrader/: CSVReader.java  CoastlineTrader.java  Code.java  FXrateTrading.java  HelpClass.java  Liquidity.java  LocalLiquidity.java  NbDcCounter.java  PriceFeedData.java  Prices.java  Runner.java
Java/LimitOrders/: AlphaEngine.java  AlphaEnginePublic.java  CSVReader.java  CoastlineTrader.java
